Fix spacing in columns

--- a/src/components/main-navigation.module.css
+++ b/src/components/main-navigation.module.css
@@ -10,6 +10,7 @@
   margin-bottom: 0;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .navigation-column h3 {
